css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

@import "hyde";
@import "poole";
@import "syntax";

.page {
    word-break: break-word;
}

.stats-container {
    overflow: auto;
}

.stats {
    width: 25%;
    margin-bottom: 0.5em;
    display: inline-block;
    text-align: left;
}

.chart-outer {
    width: 45%;
}

#chartContainer {
    position: absolute;
    top: 0;
    left: 0;
    width:100%;
    height:100%;
}

#chart-wrap {
    position: relative;
    padding-bottom: 100%;
    height: 0;
    overflow:hidden;
}

.left {
    float: left;
}

.threat-list {
    li {
        margin: 1em;
        list-style: none;
        padding-bottom: 1em;
        border-bottom: 1px solid #b4cfda;
    }
}

.nist-header {
    width: 100%;
    height: 4rem;
    background-color: #4f8cbd;
    z-index: 2;
    position: fixed;
    padding-left: 0.5rem;
    top: 0;
    left: 0;

    a {
        color: white;
    }

    h1 {
        margin-top: 0;
        padding-top: 0.6rem;
        display: inline-block;
    }
}

.orange-bar {
    width: 100%;
    height: 0.5rem;
    background-color: #e79824;
    z-index: 2;
    position: fixed;
    left: 0;
    top: 4rem;
}

.nist-footer {
    width: 100%;
    height: 4rem;
    background-color: #4f8cbd;
    padding-left: 0.5rem;
    position: fixed;
    right: 0;
    bottom: 0;
    z-index: 2;
}

html {
    height: 100%;
}

body {
    min-height: 100%;
    position: relative;
    padding-bottom: 4rem;
}

.logos {
    padding-top: 0.5rem;
}

#nist-logo, #nccoe-logo {
    height: 3rem;
    float: left;
    padding-right: 0.5rem;
}

.nist-links {
    float: right;
    list-style-type: none;
    display: inline;
    padding: 0.7rem 2rem;
    color: #fff;
    li {
        border: 1px solid #fff;
        border-radius: 3px;
        padding: 0.2rem;
        display: inline;
        a {
            color: #fff;
            font-size: 0.75rem;
        }
    }
}

.nist-header h1 a:hover {
    text-decoration: none;
}

.sidebar {
    z-index: 1;
    padding-top: 5rem;
    overflow-y: auto;
}

.down-caret {
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 5px 5px 0 5px;
  border-color: #ffffff transparent transparent transparent;
  display: inline-block;
  margin-left: 6px;
  top: -3px;
  position: relative;
  transform: rotate(0deg);
  transition: all .25s ease-in;
}

.open-caret {
    transform: rotate(180deg);
    transition: all .25s ease-out;
}

nav label {
    color: white;
}

.paragraph {
    padding-left: 2em;

    li {
        list-style-type: none;
    }
}

.search {
    display: inline-block;
    margin: 1em 0;
    float: right;
    margin-right: 0.5rem;

    input {
        font-size: 1.5em;
        color: #515151;
    }
    .text-field {
        width: 90%;
        float: left;
        border: 1px solid #ccc;
        border-right: 0px;
        height: 1.95rem;
    }

    .button {
        float: right;
        width: 10%;
        background-color: white;
        border: 0;
        height: 1.95rem;
        border: 1px solid #ccc;
        cursor: pointer;
        img {
            height: 100%;
            width: 100%;
        }
    }
}

#nav-links {
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
}

.cve-list {
    column-count: 3;
    width: 50%;
}

@media screen and (max-width: 1255px) {
    .cve-list {
        width: 75%;
    }
}

@media screen and (max-width: 767px) {
    .nist-footer {
        padding-left: 0;
    }
    .nist-links, .sidebar, .search {
        display: block;
    }
    .logos {
        width: 50%;
        margin: 0 auto;
    }
    #nist-logo, #nccoe-logo {
        height: 2.5rem;
    }
    .sidebar-nav ul {
        width: 100%;
        margin: 0 auto 1rem;

        li {
            text-align: left;
            padding-left: 30%
        }
    }
    .nist-header h1 {
        font-size: 2.25rem
    }

    .sidebar-nav-item {
        font-size: 1.2rem;
    }

    .nist-header {
        padding: 0;
        text-align: center;
        position: relative;
    }

    .orange-bar {
        position: relative;
        top: 0;
    }
    
    .sidebar {
        overflow-y: visible;
        padding-top: 3rem;
    }

    .search {
        float: left;
        width: 50%;
        margin-left: 25%;
    }
}

@media screen and (max-width: 480px) {
    #nccoe-logo {
        display: none;
    }
    #nist-logo {
        margin: 0 auto;
        float: none;
    }
    .search {
        margin-left: 2.25%;
        width: 95%;
    }
    .nist-header h1 {
        font-size: 2rem;
    }

    .cve-list {
        column-count: 2;
        width: 100%;
    }

    #nav-links {
        width: 100%;
    }
}

@media screen and (max-width: 1180px) {
    .nist-links {
        display: none;
    }
    ul.cve-examples {
        columns: 1;
    }
    .stats {
        width: 100%;
        display: block;
    }
    .container {
        max-width: 100%;
    }
    .cve-list {
        column-count: 2;
    }
}

// menu toggle
@media (max-width: 48em) {
    .sidebar {
        display: block;
        input#toggle {
            display: none;
            visibility: hidden;
        }

        label {
            display: block;
            padding: .5em .5em 1.5em .5em;
            text-align: center;
            font-size: 1.4rem;
        }

        label:before {
            font-size: 1.4rem;
            content: "Show";
            margin-right: 8px;
        }

        .expand {
            height: 0;
            overflow: hidden;
            transition: height .5s;
        }

        #toggle:checked ~ .expand {
          height: 100%;
        }

        #toggle:checked ~ label::before {
          content: "Hide";
        }

    }
}

.menu-toggle {
    display: none;
}

.expand {
    height: auto;
    overflow: auto;;
}

.cve-examples {
    columns: 3;
}

.footer {

    a {
        font-size: 18px;
    }

    sub {
        font-size: 15px;
    }
}

